add asortiment list

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="pitsa__wrap">
                     <h2 class="pitsa__wrap-title">Qo'shimchalar</h2>
                     <div class="pitsa__check__wrap">
-                        <label for="check7" class="pitsa__label-check"><input type="checkbox" name="check1" id="check7" value="- achchiq"><span>Achchiq</span></label>
-                        <label for="check8" class="pitsa__label-check"><input type="checkbox" name="check1" id="check8" value="- sosiskali"><span>Sosiskali</span></label>
+                        <label for="check7" class="pitsa__label-check"><input class="pitsa__asortiment" type="checkbox" name="check1" id="check7" value="- achchiq"><span>Achchiq</span></label>
+                        <label for="check8" class="pitsa__label-check"><input class="pitsa__asortiment" type="checkbox" name="check1" id="check8" value="- sosiskali"><span>Sosiskali</span></label>
                     </div>
                     
                 </div>
